--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -333,9 +333,11 @@ tr td,
 ================================*/
 .login {
   height: 100vh;
+  overflow: hidden;
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
+  flex-direction: column;
   -ms-flex-align: center;
   -ms-flex-pack: center;
   -webkit-box-align: center;
@@ -363,6 +365,7 @@ tr td,
   box-sizing: border-box;
   height: auto;
   padding: 10px;
+  margin: 10px 0;
   font-size: 16px;
 }
 
@@ -370,7 +373,7 @@ tr td,
   z-index: 2;
 }
 
-.form-signin input[type='email'] {
+/* .form-signin input[type='email'] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -380,4 +383,4 @@ tr td,
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-}
+} */
