--- a/views/modules/_navs.ejs
+++ b/views/modules/_navs.ejs
@@ -1,8 +1,8 @@
   <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 pr-3">
-      <a class="navbar-brand col-1 col-md-2 mr-0" href="/">
+      <!-- <a class="navbar-brand col-1 col-md-2 mr-0" href="/">
           <img class="navbar-brand__logo pl-2" src="/images/logo.png">
           <span class="navbar-brand__name">MS</span>
-      </a>
+      </a> -->
       <button class="btn btn-secondary navbar-toggler d-md-none" type="button"
           data-toggle="collapse" data-target="#sideBar">
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
@@ -118,10 +118,7 @@
                           </a>
                       </li>
                   </ul>
-                  <div class="copyright text-center text-muted">
-                      Made with &hearts; by <a href="https://1mandev.com" target="_blank"
-                          class="text-secondary">1MANDEV.COM</a>
-                  </div>
+                  
               </nav>
           </div>
 
